--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.addEventListener('DOMContentLoaded', () => {
     const osType = detectOS();
     document.getElementById('device-type').textContent = `Device Type: ${detectDeviceType()}`;
     document.getElementById('os-type').textContent = `Operating System: ${osType}`;
-    redirectToURL(osType);
+    // redirectToURL(osType);
 
     // Debugging for image and item name loading
     if (image_url) {
