--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <title>OS Based Redirection</title>
 </head>
 <body>
-<h1 id="item-name" style="display: none;"></h1>
 <img id="item-image" src="" alt="Item Image" style="display: none;">
-<p id="device-type"></p>
-<p id="os-type"></p>
+<h1 id="item-name" style="display: none;"></h1>
+<!-- <p id="device-type"></p>
+<p id="os-type"></p> -->
 
 <script>
 function getQueryParams() {
