remove redirect temporarily

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 window.location.replace("https://www.joinorderly.com");
             }
         }
-        redirectBasedOnOS();
+        // redirectBasedOnOS();
     </script>
 </body>
 </html>
