--- a/index.html
+++ b/index.html
@@ -3,23 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check it out on Orderly!</title>
-    <meta property="og:title" content="Check it out on Orderly!" />
-    <meta property="og:image" content="https://www.joinorderly.com/assets/images/image06.jpg?v=4e219e81" />
+    <title>Orderly</title>
 </head>
 <body>
     <script>
-        function redirectBasedOnOS() {
-            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                window.location.replace("https://apps.apple.com/us/app/orderly-returns-assistant/id6452804073");
-            } else if (/android/i.test(userAgent)) {
-                window.location.replace("https://play.google.com/store/apps/details?id=com.orderly.android");
-            } else {
-                window.location.replace("https://www.joinorderly.com");
-            }
+        function openLink() {
+            const deepLink = 'orderly://';
+            const url1 = 'https://apps.apple.com/us/app/orderly-returns-assistant/id6452804073'; // For iOS and Mac
+            const url2 = 'https://play.google.com/store/apps/details?id=com.orderly.android&pli=1'; // For Android
+            const url3 = 'https://www.joinorderly.com'; // For Others
+
+            // Try to open the deep link
+            window.location = deepLink;
+
+            setTimeout(function() {
+                // Check if the deep link did not open within 500 milliseconds
+                if (!document.hasFocus()) {
+                    return;
+                }
+
+                // Detecting the platform
+                var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+                if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                    window.location = url1; // iOS devices
+                } else if (/Mac/i.test(userAgent)) {
+                    window.location = url1; // Mac OS
+                } else if (/android/i.test(userAgent)) {
+                    window.location = url2; // Android devices
+                } else {
+                    window.location = url3; // Other devices
+                }
+            }, 500);
         }
-        // redirectBasedOnOS();
+
+        // Run on load
+        window.onload = openLink;
     </script>
 </body>
 </html>
