--- a/index.html
+++ b/index.html
@@ -3,41 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orderly</title>
+    <title>Dynamic Deep Linking</title>
 </head>
 <body>
     <script>
         function openLink() {
-            const deepLink = 'orderly://';
+            // Base deep link
+            const baseDeepLink = 'orderly://';
             const url1 = 'https://apps.apple.com/us/app/orderly-returns-assistant/id6452804073'; // For iOS and Mac
             const url2 = 'https://play.google.com/store/apps/details?id=com.orderly.android&pli=1'; // For Android
             const url3 = 'https://www.joinorderly.com'; // For Others
 
-            // Try to open the deep link
+            // Get current URL
+            const currentUrl = new URL(window.location.href);
+            const path = currentUrl.pathname.slice(1); // Remove the leading "/"
+            const searchParams = new URLSearchParams(currentUrl.search);
+
+            let deepLink = baseDeepLink;
+            if (path) {
+                deepLink += path; // Add path to base deep link
+                if (Array.from(searchParams).length > 0) {
+                    deepLink += '?' + searchParams; // Add query parameters if any
+                }
+            }
+
+            // Navigate to the deep link
             window.location = deepLink;
 
             setTimeout(function() {
-                // Check if the deep link did not open within 500 milliseconds
                 if (!document.hasFocus()) {
-                    return;
-                }
-
-                // Detecting the platform
-                var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-                if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                    window.location = url1; // iOS devices
-                } else if (/Mac/i.test(userAgent)) {
-                    window.location = url1; // Mac OS
-                } else if (/android/i.test(userAgent)) {
-                    window.location = url2; // Android devices
-                } else {
-                    window.location = url3; // Other devices
+                    // Check the platform and redirect accordingly
+                    var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+                    if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                        window.location = url1; // iOS devices
+                    } else if (/Mac/i.test(userAgent)) {
+                        window.location = url1; // Mac OS
+                    } else if (/android/i.test(userAgent)) {
+                        window.location = url2; // Android devices
+                    } else {
+                        window.location = url3; // Other devices
+                    }
                 }
             }, 2000);
         }
 
-        // Run on load
         window.onload = openLink;
     </script>
 </body>
 </html>
+
