add google analytics conversion tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orderly - Returns Assistant</title>
     <link rel="icon" type="image/png" href="images/orderly_icon_white_square.png">
+    
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16502156015"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-16502156015');
+    </script>
+
+    <!-- Event snippet for App Store conversion page -->
+    <script>
+      gtag('event', 'conversion', {'send_to': 'AW-16502156015/XFSYCO3MjbsZEO_V67w9'});
+    </script>
 </head>
 <body>
     <script>
@@ -42,4 +57,3 @@
     </script>
 </body>
 </html>
-
