make it so pcs also go to apple app store

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 } else if (/android/i.test(userAgent)) {
                     window.location.href = 'https://play.google.com/store/apps/details?id=com.orderly.android&pli=1'; // Android devices
                 } else {
-                    window.location.href = 'https://www.joinorderly.com'; // Other devices
+                    window.location.href = 'https://apps.apple.com/us/app/orderly-returns-assistant/id6452804073'; // Other devices
                 }
             }, 500);
         }
