turn logic back on

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <link rel="icon" type="image/png" href="images/orderly_icon_white_square.png">
     
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
-<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16502156015"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16502156015"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'AW-16502156015');
-    </script> -->
+    </script>
 
     <!-- Event snippet for App Store conversion page -->
-<!--     <script>
+    <script>
       gtag('event', 'conversion', {'send_to': 'AW-16502156015/XFSYCO3MjbsZEO_V67w9'});
-    </script> -->
+    </script>
 </head>
 <body>
-<!--     <script>
+    <script>
         function openLink() {
             const baseUrl = 'orderly://';
             const params = new URLSearchParams(window.location.search);
@@ -54,6 +54,6 @@
         }
 
         window.onload = openLink;
-    </script> -->
+    </script>
 </body>
 </html>
